# auth-vault

./: .gitignore  DB_WORKFLOW_DIAGRAM.md  FIX_KEYCLOAK_FRONTEND_URL.md  FIX_REDIRECT_URI.md  KEYCLOAK_CLI_CLIENT_SETUP.md  KEYCLOAK_CONSENT_FIX.md  LOGGER_MIGRATION_COMPLETE.md  LOGGER_MIGRATION_PROGRESS.md  MIGRATION_COMPLETE_SUMMARY.md  OFFLINE_TOKEN_QUICK_START.md  PINO_WORKER_THREAD_FIX.md  README.md  REFRESH_TOKEN_UPSERT_SUMMARY.md  RETRIEVE_BY_SESSION_STATE_UPDATE.md  REVOKE_OFFLINE_TOKEN_SESSION_SUMMARY.md  SERVICE_LAYER_REFACTORING.md  TASK_17_COMPLETION_SUMMARY.md  TASK_MANAGER_DEMO.md  docker-compose.yml  drizzle.config.ts  flow.md  keyclaok-init.sh  package.json  pnpm-lock.yaml
auth-manager-svc/: .gitignore  GUARDS_IMPLEMENTATION_SUMMARY.md  GUARDS_USAGE_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml  test_app_startup.py  test_config_load.py  test_config_validation.py  test_guards_and_security.py  test_health_endpoints.py  verify_request_state.py  verify_task_9.py  verify_validate_token.py
auth-manager-svc/alembic/: README.md  env.py
auth-manager-svc/alembic/versions/: 001_create_auth_vault_table.py
auth-manager-svc/app/: __init__.py  config.py  dependencies.py  main.py
auth-manager-svc/app/api/: health.py
auth-manager-svc/app/core/: exceptions.py  guards.py  logging.py  security.py
auth-manager-svc/app/db/: __init__.py  base.py  models.py
auth-manager-svc/app/middleware/: __init__.py  logging.py  (+1 more)
auth-manager-svc/tests/: __init__.py  conftest.py
(+506 files in other folders)
